--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
+    "eslint": "7.24.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-config-react-app": "^6.0.0",
@@ -79,8 +79,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "airbnb",
-      "prettier"
+      "airbnb"
     ],
     "rules": {
       "react/jsx-filename-extension": 0,
@@ -163,14 +162,14 @@
   },
   "husky": {
     "hooks": {
-        "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.{js,vue}": [
-        "eslint --fix",
-        "prettier --write",
-        "git add"
+    "**/*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
     ]
   }
 }
